fixed a spacing related bug

--- a/mimsticker.ir-newer/stickerShop-website/sass/style.scss
+++ b/mimsticker.ir-newer/stickerShop-website/sass/style.scss
@@ -40,6 +40,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 2rem;
 
   input[type="button"] {
     background-color: var(--myPrimary);
@@ -54,11 +55,6 @@ body {
     background-size: cover;
     background-position: center;
   }
-}
-
-.hero {
-  position: relative;
-  padding: 2rem;
 }
 
 .carousel-caption h5 {
@@ -87,14 +83,11 @@ body {
 
 .topCard,
 .bottomCard {
-  padding: 0;
-  margin: 0;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
   justify-content: space-between;
   line-height: 40px;
-  padding: 0 2rem; //remember to fix this you should set padding only once and not for every element
 
   img {
     width: 100%;
